--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>UNO Scoreboard</title>
     <link rel="stylesheet"
-          href="webjars/bootstrap/3.3.4/css/bootstrap.min.css">
+          href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
